# alexier-automatas

./: CMakeLists.txt  features.txt  main.cpp
files/: CustomFile.cpp  CustomFile.h
utilidad/: Util.cpp  Util.h
utilidad/constantes/: Caracteres.cpp  Caracteres.h  Key.cpp  Key.h  Variables.cpp  Variables.h
